2009-05-07  Jonas Larsson <jonas.larsson@manodo.se> 

	* XmlSchemaValidatorTests.cs : added test for bug #501666.

2009-04-22  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaValidatorTests.cs : added test for bug #496192 and #496205.

2009-01-30  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaValidatorTests.cs : added test for bug #469713.

2008-12-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaSetTests.cs : added test for Compile() after "duplicating"
	  call to Add() for such schemas that also have xs:import of the
	  same schema that causes errors on processing substitutionGroup.

2008-10-28  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaValidatorTests.cs : added test for bug #435206.

2008-10-28  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaValidatorTests.cs : added test for bug #433774.

2008-09-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaValidatorTests.cs : added test for bug #422581.

2008-06-06  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaTests.cs : fix file path.

2008-06-06  James Fitzsimons <james.fitzsimons@gmail.com>

	* XmlSchemaTests.cs: added test for bug #397612.
	* XmlSchemaAssertion.cs : make sure to close schema XmlReader.

2008-06-06  James Fitzsimons <james.fitzsimons@gmail.com>

	* XmlSchemaTests.cs: added test to support change to 
	  GetResolvedUri to return Uri in correct case
	  to make compatible with the Microsoft.NET framework.

2008-02-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaTests.cs: added test for bug #361818.

2008-02-04  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaValidatorTests.cs : new. Test for bug #358408.

2006-08-04  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaTest.cs : added bug #78985 case.

2006-07-27  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaSetTest.cs : added bug #77489 case.
	* XmlSchemaCollectionTests.cs : removed NotWorking from #77820 case.

2006-07-27  Atsushi Enomoto  <atsushi@ximian.com>
