@@ -1,3 +1,7 @@
+2009-05-21  Gert Driesen  <drieseng@users.sourceforge.net>
+
+	* XmlSchemaTests.cs: added tests for bug #502115.
+
 2009-05-07  Jonas Larsson <jonas.larsson@manodo.se> 
 
 	* XmlSchemaValidatorTests.cs : added test for bug #501666.
